--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h4 id="title">안녕하세요</h4>
     <a href="naver.com" class="link">링크</a>
     <button id="button">버튼</button>
-    <script src="index.js"></script>
+    <script src="function.js"></script>
   </body>
 </html>
